--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <!--Kaynak Bölümü -->
 
-    <section class="bilgilendirme">
+    <section class="kaynak">
         <a href="http://www.koeri.boun.edu.tr/scripts/lst6.asp" class="kutu">
             <i class="fa fa-bullseye" aria-hidden="true"></i>
             <span>Türkiye'deki Son Depremler</span>
