--- a/denizjeofizik.html
+++ b/denizjeofizik.html
@@ -9,12 +9,12 @@
     <meta name="keywords" content="Yer Bilimleri, Earth Sciences, Yer Bilimi, Earth Science">
     <meta name="description" content="Yer Bilimleri ve Alt Dalları">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="denizjeofizik.css">
     <link rel="stylesheet" href="font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
-    <title>Yer Bilimleri</title>
+    <title>Deniz Jeofiziği ve Jeolojisi</title>
 </head>
 
 <body>
@@ -68,45 +68,91 @@
     <!--İcerik Bölümü,-->
 
     <section class="icerik">
-
-        <h2>Yer Bilimleri Nedir ?</h2>
+        <h2>Deniz Jeofiziği ve Jeolojisi</h2>
         <hr>
         <br>
-        Yer bilimleri, Dünya'nın ve atmosferinin fiziksel ve kimyasal yapısıyla uğraşan bir bilim dalı olup, Dünya
-        gezegenine ait bütün doğa bilimi alanlarını kapsar. Yer bilimleri gezegen biliminin bir dalı olarak
-        düşünülebilir ancak tarihi daha eskiye dayanır. Yer bilimleri, her biri kendi içinde daha özelleşmiş
-        alanlara ayrılabilen dört ana çalışma alanından oluşur; bunlar sırasıyla litosfer, hidrosfer, atmosfer ve
-        biyosferdir.
-        <br>
-        <br>
-        Yer bilimlerine hem indirgemeci hem de bütüncül yaklaşımlar bulunmaktadır. Yer bilimleri aynı zamanda Dünya
-        ve Dünya'ya komşu gökcisimlerinin incelenmesidir. Yer bilimcilerin bir kısmı enerji ve maden kaynaklarının
-        yerlerini tespit etmek için üzerinde çalıştıkları gezegen hakkındaki bilgilerini kullanırken, bir kısmı da
-        beşeri faaliyetlerin Dünya'nın çevresine olan etkilerini araştırır ve gezegenimizi korumak için yöntemler
-        tasarlar. Bazısı da volkanlar, depremler ve kasırgalar gibi doğa olayları hakkındaki bilgilerini kullanarak
-        insanların bu tehlikeli doğa olaylarına karşı savunmasız kalmaması için yerleşim ve topluluk planlarının
-        oluşturulmasına katkıda bulunur.
-        <br>
-        <br>
-        Yer bilimleri, jeoloji, litosfer ve büyük ölçekli Dünya iç yapısının yanı sıra atmosfer, hidrosfer ve
-        biyosferin incelenmesini kapsayabilir. Yer bilimciler Dünya'nın nasıl işlediği ve evrimleştiği hakkında
-        nicel bir anlayış oluşturmak için genellikle jeoloji, kronoloji, fizik, kimya, coğrafya, biyoloji ve
-        matematik bilimlerini kullanır. Örneğin, meteorologlar hava durumunu inceler ve tehlikeli fırtınaları
-        araştırırlar. Hidrologlar suyu inceler ve gözlemleri sonucunda sel uyarısında bulunurlar. Sismologlar
-        depremleri inceler ve nerede gerçekleşeceğini anlamaya çalışırlar. Jeologlar kayaları inceler ve faydalı
-        minerallerin bulunmasına yardımcı olurlar. Yer bilimciler çoğunlukla sahada çalıştıkları için dağlara
-        tırmanmak, deniz dibini araştırmak, mağaralar boyunca sürünmek, bataklıklarda bata çıka yürümek genellikle
-        işlerinin birer parçasıdır. Ölçümler yapar ve numune (bunlara taşlar ve nehir suyu örnek verilebilir)
-        toplarlar ve bulgularını çizelge ve haritalara kaydederler.
-        <br>
-        <hr>
+        <p>
+            · Kıyı / Liman İnşaatları, <br>
+            · Enerji Santralleri İnşaatı, <br>
+            · Atıksu / Deniz Deşarj İstasyonları, <br>
+            · Açık Deniz / Kültür Balıkçılığı, <br>
+            · Çevre Etki Değerlendirme (ÇED) raporlarının hazırlanması, <br>
+            · Deniz Tabanı Araştırmaları <br>
+            · Seyir Emniyeti, <br>
+            · Sığ Su Sismik Çalışmalar, <br>
+            · Deniz Dibi Tabii Kaynakların Araştırılması. <br>
+            <br>
+            YAKIN KIYI ve KIYI ÖTESİ ÇALIŞMALAR <br>
+            <br>
+            Yakın kıyı ve kıyı ötesi olarak belirtilen deniz alanlarında özel ve kamu kuruluşları talepleri çerçevesinde
+            tüm hidrografik, oşinografik, jeofizik ve jeoloji mühendisliği’ne yönelik deniz ölçme, örnekleme, veri
+            değerlendirme çalışmaları yapabilmekte ve istenen amaca yönelik teknik raporlar hazırlamaktadır. <br>
 
-        <marquee behavior="alternate" direction="right" scrollamount="10">
-            <img src="Resimler/Araba1.jpg" alt="kayanresim" class="yuvarlak">
-        </marquee>
-        <marquee behavior="alternate" direction="left" scrollamount="10">
-            <img src="Resimler/guzergah-etutleri_e5d7f.jpg" alt="kayanresim" class="yuvarlak">
-        </marquee>
+            Bu çalışmalar karşılıklı yapılan mukavelelerin uygulamaya konulmasını takiben gerçekleştrilmektedir. Yapılan
+            çalışmanın özelliğine göre kullanılan cihaz / sistemlerin de fiyatlarının dikkate alınarak tespit edilen
+            maliyete göre çalışma icra edilmektedir. <br>
+
+            Bu kapsamda aşağıda belirtilen alanlarda kullanılmak üzere çeşitli hidrografik / oşinografik veriler
+            toplanmaktadır. <br>
+            <br>
+            · Kıyı / Liman İnşaatları, <br>
+            · Enerji Santralleri İnşaatı, <br>
+            · Atıksu / Deniz Deşarj İstasyonları, <br>
+            · Açık Deniz / Kültür Balıkçılığı, <br>
+            · Çevre Etki Değerlendirme (ÇED) raporlarının hazırlanması, <br>
+            · Deniz Tabanı Araştırmaları <br> 
+            · Seyir Emniyeti, <br>
+            · Sığ Su Sismik Çalışmalar, <br>
+            · Deniz Dibi Tabii Kaynakların Araştırılması. <br>
+            <br>
+            Bu hususta yapılan çalışmalar; <br>
+            <br>
+            o İstenen deniz alanlarında yüzey, ara derinlikler ve dipte kısa / uzun süreli güncel teknolojiyi yansıtan
+            ADCP (Acoustic Doppler Current Profiles) akıntı cihaz / sistemleri ile ölçümler yaparak akıntı yön ve
+            şiddetinin dağılımlarının tespiti ile yorumunu içeren Teknik Rapor üretimi.
+            <br>
+            <br>
+            o Kıyı / yakın kıyıda yapılacak her türlü liman mendirek, iskele, tesis inşaatları ile kablo ve boru
+            döşemeleri için dip yapısının güncel teknolojiyi yansıtan sığ su sismik sistemleri ile tabakalaşmasına
+            yönelik tabaka devamlılığı, kırılma, kıvrım, kalınlık gibi özelliklerinin tespiti ve yorumu ile teknik rapor
+            üretimi. <br>
+
+            o Deniz dibinin jeolojik açıdan cins ve formasyonu ile yüzeyden itibaren 30-40 cm kalınlığa kadar
+            yorumlanması. <br>
+
+            o Dipte çeşitli obje ve her türlü batık arama çalışmalarında Side Scan Sonar uygulamaları. <br>
+
+            o Hassas ve detaylı derinlik (batimetri) ölçümleri ve deniz dibi morfolojisinin tespitine yönelik tek bimli
+            / çok bimli Echo Sounding sistemlerinin uygulamaları ve deniz dibinin üç boyutlu görüntülenmesi. <br>
+
+            o Hidrografik / Topografik / Harita Mühendisliği uygulamaları ile kıyı hattı çıkarılması çalışmaları. <br>
+ 
+            o Mareograf istasyonları kurarak kıyı kesiminde deniz seviyesi tespiti çalışmaları. <br>
+
+            o Kıyı ve yakın kıyı alanlarına kurulacak santraller için soğutmada kullanılacak deniz suyu için bölgede
+            akıntı ve oşinografik ölçme çalışmaları ile, sıcaklık, tuzluluk, kondaktivite, yoğunluk tespiti için CSTD,
+            Seabird ve benzeri ölçme sistemleri uygulamaları ve deniz suyu özelliklerinin tespiti. <br>
+
+            o Sondaj platformlarının yer tespitine yönelik oşinografik / hidrografik / jeofiziksel ölçme çalışmaları. <br>
+
+            o Denizde arz manyetik alan ölçmeleri için deniz manyetometresi ile uygulamalar. <br>
+
+            o Çoklu su numune alıcı, nansen şişeleri, CSTD gibi oşinografik cihaz / sistemlerle çeşitli amaçlar ve
+            mühendislik altyapı çalışmaları için yüzey, yanal, dikey deniz suyu özelliklerindeki değişimlerin tespiti. <br>
+            <br>
+
+            Mühendislik ve bilimsel çalışmalarda kullanılmak üzere toplanan veri çeşitleri ve yapılan analizler ise: <br>
+            <br>
+            · Deniz Suyu Sıcaklık, Tuzluluk, pH ve Oksijen Ölçümü, <br>
+            · Deniz Suyu Numune Alımı, <br>
+            · Akıntı, Dalga ve Gel-Git Ölçümü, <br>
+            · Yandan Taramalı Sonar ile sayısal ve analog olarak deniz dibi görüntüsünün çıkarılması, <br>
+            · Dip numunesi alımı ve analizi ile Dip Sediment Dağılım Haritaları hazırlanması, <br>
+            · Meteorolojik veri toplanması, <br>
+        </p>
+
+        <br>
+        <br>
         <hr>
     </section>
 
@@ -259,15 +305,17 @@
         <ul>
             <h3>Bize Ulaşın</h3>
             <hr>
-            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> +90 465 799 64 79</li>
-            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> yerbilimleri@.com.tr</li>
+            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> +90 465 799 64 79
+            </li>
+            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> yerbilimleri@.com.tr
+            </li>
         </ul>
 
     </footer>
 
     <div class="footerbar">
         Tüm Hakları Saklıdır &copy;
-        </div>
+    </div>
 
     <!--Footer Bitiş-->
 
