--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -9,12 +9,12 @@
     <meta name="keywords" content="Yer Bilimleri, Earth Sciences, Yer Bilimi, Earth Science">
     <meta name="description" content="Yer Bilimleri ve Alt Dalları">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="hakkimizda.css">
     <link rel="stylesheet" href="font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
-    <title>Yer Bilimleri</title>
+    <title>Hakkımızda</title>
 </head>
 
 <body>
@@ -69,43 +69,64 @@
 
     <section class="icerik">
 
-        <h2>Yer Bilimleri Nedir ?</h2>
+        <h2>Hakkımızda</h2>
         <hr>
         <br>
-        Yer bilimleri, Dünya'nın ve atmosferinin fiziksel ve kimyasal yapısıyla uğraşan bir bilim dalı olup, Dünya
-        gezegenine ait bütün doğa bilimi alanlarını kapsar. Yer bilimleri gezegen biliminin bir dalı olarak
-        düşünülebilir ancak tarihi daha eskiye dayanır. Yer bilimleri, her biri kendi içinde daha özelleşmiş
-        alanlara ayrılabilen dört ana çalışma alanından oluşur; bunlar sırasıyla litosfer, hidrosfer, atmosfer ve
-        biyosferdir.
+        1980 Yılında İstanbul’da kurulmuş Türkiye’nin ilk kurulan jeofizik mühendislik bürosudur. 1988 tarihinden
+        itibaren şirket merkezi İzmir’e taşınmıştır.
+
+        Sumet Yerbilimleri Sondajcılık Ltd. Şti., iki ortaklıdır. Bu ortaklar, Jeofizik Y. Mühendisi Erhan İçöz ve
+        İnşaat Y. Mühendisi Dr. Görkem İçöz’ dür.
+
+        Şirket, yerbilimlerinin ve inşaat mühendisliğinin çeşitli alanlarında yurtiçi ve yurtdışında çalışmalar
+        yapmaktadır.
         <br>
         <br>
-        Yer bilimlerine hem indirgemeci hem de bütüncül yaklaşımlar bulunmaktadır. Yer bilimleri aynı zamanda Dünya
-        ve Dünya'ya komşu gökcisimlerinin incelenmesidir. Yer bilimcilerin bir kısmı enerji ve maden kaynaklarının
-        yerlerini tespit etmek için üzerinde çalıştıkları gezegen hakkındaki bilgilerini kullanırken, bir kısmı da
-        beşeri faaliyetlerin Dünya'nın çevresine olan etkilerini araştırır ve gezegenimizi korumak için yöntemler
-        tasarlar. Bazısı da volkanlar, depremler ve kasırgalar gibi doğa olayları hakkındaki bilgilerini kullanarak
-        insanların bu tehlikeli doğa olaylarına karşı savunmasız kalmaması için yerleşim ve topluluk planlarının
-        oluşturulmasına katkıda bulunur.
-        <br>
-        <br>
-        Yer bilimleri, jeoloji, litosfer ve büyük ölçekli Dünya iç yapısının yanı sıra atmosfer, hidrosfer ve
-        biyosferin incelenmesini kapsayabilir. Yer bilimciler Dünya'nın nasıl işlediği ve evrimleştiği hakkında
-        nicel bir anlayış oluşturmak için genellikle jeoloji, kronoloji, fizik, kimya, coğrafya, biyoloji ve
-        matematik bilimlerini kullanır. Örneğin, meteorologlar hava durumunu inceler ve tehlikeli fırtınaları
-        araştırırlar. Hidrologlar suyu inceler ve gözlemleri sonucunda sel uyarısında bulunurlar. Sismologlar
-        depremleri inceler ve nerede gerçekleşeceğini anlamaya çalışırlar. Jeologlar kayaları inceler ve faydalı
-        minerallerin bulunmasına yardımcı olurlar. Yer bilimciler çoğunlukla sahada çalıştıkları için dağlara
-        tırmanmak, deniz dibini araştırmak, mağaralar boyunca sürünmek, bataklıklarda bata çıka yürümek genellikle
-        işlerinin birer parçasıdır. Ölçümler yapar ve numune (bunlara taşlar ve nehir suyu örnek verilebilir)
-        toplarlar ve bulgularını çizelge ve haritalara kaydederler.
+
+        <ul>
+            <li>* Mikrobölgeleme, imara esas ve yerleşime uygunluk araştırma ve sondajları;</li>
+            <li>* Güzergah, otoyol, demiryolu ve tünel araştırmaları;</li>
+            <li>* Depremsellik, ve arazi kullanım araştırmaları;</li>
+            <li>* Heyelan ve kaya düşmesi araştırmaları;</li>
+            <li>* Jeotermal akışkan, ve karbondioksit araştırmaları;</li>
+            <li>* Yeraltısuyu, tuzluluk, havza bazında yeraltısuyu araştırmaları;</li>
+            <li>* Mermer, doğaltaş ve endüstriyel hammadde aramaları;</li>
+            <li>* Metalik ve ametalik maden aramaları;</li>
+            <li>* Doğalgaz ve petrol aramaları;</li>
+            <li>* Arkeolojik alanların aranması ve haritalanması;</li>
+            <li>* Katı-sıvı atık alanlarının araştırılması;</li>
+            <li>* Altyapı araştırmaları ( gömülü boru ve elektrik hatları, baz kulesi altyapısı vb.);</li>
+            <li>* Adli araştırmalar (gömülü ceset, toplu mezarlar, sığınak, gizli tünel vb.);</li>
+            <li>* Deniz jeofiziği;</li>
+            <li>* Teknik danışmanlık;</li>
+        </ul>
+            <br>
+            Geoteknik alanında ise danışmanlık, geoteknik tasarım, modelleme ve raporlama başta olmak üzere ,
+            <br>
+            <br>
+            <ul>
+                <li>* Derin kazık ve iksa projeleri;</li>
+                <li>* Derin temel dizaynı;</li>
+                <li>* Zemin islah işleri;</li>
+                <li>* Heyelan önleme projeleri;</li>
+                <li>* Yamaç ve şev stabilite hesapları;</li>
+                <li>* Sahaya özel sismik risk değerlendirmesi;</li>
+                <li>* Zemin-bina etkileşimi;</li>
+                <li>* Bina ölçümleri (donatı ve projeye uygunluk);</li>
+                <li>* Geoteknik uygulamalar (fore kazık, jet grout vb.)</li>
+            </ul>
+            <br>
+            başlıca çalışma alanlarıdır.
+            <br>
+            
         <br>
         <hr>
 
         <marquee behavior="alternate" direction="right" scrollamount="10">
-            <img src="Resimler/Araba1.jpg" alt="kayanresim" class="yuvarlak">
+            <img src="Resimler/yeraltisuyu-aramalari_baa7e.jpg" alt="kayanresim" class="yuvarlak">
         </marquee>
         <marquee behavior="alternate" direction="left" scrollamount="10">
-            <img src="Resimler/guzergah-etutleri_e5d7f.jpg" alt="kayanresim" class="yuvarlak">
+            <img src="Resimler/zemin-ve-yerlesime-uygunluk-etutleri_d8e43.jpg" alt="kayanresim" class="yuvarlak">
         </marquee>
         <hr>
     </section>
@@ -259,15 +280,17 @@
         <ul>
             <h3>Bize Ulaşın</h3>
             <hr>
-            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> +90 465 799 64 79</li>
-            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> yerbilimleri@.com.tr</li>
+            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> +90 465 799 64 79
+            </li>
+            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> yerbilimleri@.com.tr
+            </li>
         </ul>
 
     </footer>
 
     <div class="footerbar">
         Tüm Hakları Saklıdır &copy;
-        </div>
+    </div>
 
     <!--Footer Bitiş-->
 
