--- a/yontemlerimiz.html
+++ b/yontemlerimiz.html
@@ -9,12 +9,12 @@
     <meta name="keywords" content="Yer Bilimleri, Earth Sciences, Yer Bilimi, Earth Science">
     <meta name="description" content="Yer Bilimleri ve Alt Dalları">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="yontemlerimiz.css">
     <link rel="stylesheet" href="font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
-    <title>Yer Bilimleri</title>
+    <title>Uyguladığımız Yöntemler</title>
 </head>
 
 <body>
@@ -69,44 +69,27 @@
 
     <section class="icerik">
 
-        <h2>Yer Bilimleri Nedir ?</h2>
+        <h2>Yöntemlerimiz</h2>
         <hr>
         <br>
-        Yer bilimleri, Dünya'nın ve atmosferinin fiziksel ve kimyasal yapısıyla uğraşan bir bilim dalı olup, Dünya
-        gezegenine ait bütün doğa bilimi alanlarını kapsar. Yer bilimleri gezegen biliminin bir dalı olarak
-        düşünülebilir ancak tarihi daha eskiye dayanır. Yer bilimleri, her biri kendi içinde daha özelleşmiş
-        alanlara ayrılabilen dört ana çalışma alanından oluşur; bunlar sırasıyla litosfer, hidrosfer, atmosfer ve
-        biyosferdir.
-        <br>
-        <br>
-        Yer bilimlerine hem indirgemeci hem de bütüncül yaklaşımlar bulunmaktadır. Yer bilimleri aynı zamanda Dünya
-        ve Dünya'ya komşu gökcisimlerinin incelenmesidir. Yer bilimcilerin bir kısmı enerji ve maden kaynaklarının
-        yerlerini tespit etmek için üzerinde çalıştıkları gezegen hakkındaki bilgilerini kullanırken, bir kısmı da
-        beşeri faaliyetlerin Dünya'nın çevresine olan etkilerini araştırır ve gezegenimizi korumak için yöntemler
-        tasarlar. Bazısı da volkanlar, depremler ve kasırgalar gibi doğa olayları hakkındaki bilgilerini kullanarak
-        insanların bu tehlikeli doğa olaylarına karşı savunmasız kalmaması için yerleşim ve topluluk planlarının
-        oluşturulmasına katkıda bulunur.
-        <br>
-        <br>
-        Yer bilimleri, jeoloji, litosfer ve büyük ölçekli Dünya iç yapısının yanı sıra atmosfer, hidrosfer ve
-        biyosferin incelenmesini kapsayabilir. Yer bilimciler Dünya'nın nasıl işlediği ve evrimleştiği hakkında
-        nicel bir anlayış oluşturmak için genellikle jeoloji, kronoloji, fizik, kimya, coğrafya, biyoloji ve
-        matematik bilimlerini kullanır. Örneğin, meteorologlar hava durumunu inceler ve tehlikeli fırtınaları
-        araştırırlar. Hidrologlar suyu inceler ve gözlemleri sonucunda sel uyarısında bulunurlar. Sismologlar
-        depremleri inceler ve nerede gerçekleşeceğini anlamaya çalışırlar. Jeologlar kayaları inceler ve faydalı
-        minerallerin bulunmasına yardımcı olurlar. Yer bilimciler çoğunlukla sahada çalıştıkları için dağlara
-        tırmanmak, deniz dibini araştırmak, mağaralar boyunca sürünmek, bataklıklarda bata çıka yürümek genellikle
-        işlerinin birer parçasıdır. Ölçümler yapar ve numune (bunlara taşlar ve nehir suyu örnek verilebilir)
-        toplarlar ve bulgularını çizelge ve haritalara kaydederler.
-        <br>
-        <hr>
 
-        <marquee behavior="alternate" direction="right" scrollamount="10">
-            <img src="Resimler/Araba1.jpg" alt="kayanresim" class="yuvarlak">
-        </marquee>
-        <marquee behavior="alternate" direction="left" scrollamount="10">
-            <img src="Resimler/guzergah-etutleri_e5d7f.jpg" alt="kayanresim" class="yuvarlak">
-        </marquee>
+        <ul>
+            <li>* Sismik Kırılma, Yansıma, 2 ve 3 boyutlu Tomografik Ölçümler</li>
+            <li>* MASW, SASW, Remi ve 2 ve 3 Boyutlu Tomografik Ölçümler</li>
+            <li>* Rezistivite (DES) (AB/2 max 4000 m)</li>
+            <li>* GPR (jeoradar)</li>
+            <li>* Çok elektrotlu Elektrik Yöntemi (2B ve 3B, max 950 m profil 96 elektrot)</li>
+            <li>* Mikrotremör</li>
+            <li>* Manyetotellürk (MT)- Audio Manyetotellürik (AMT)</li>
+            <li>* IP</li>
+            <li>* Manyetik</li>
+            <li>* Mikrogravite</li>
+            <li>* SP -Doğal Potansiyel</li>
+            <li>* Kuyu Logu Ölçümleri</li>
+            <li>* Geoteknik Programlar (Plaxis-Talren etc.)</li>
+            
+        </ul>
+        <br>
         <hr>
     </section>
 
@@ -259,15 +242,17 @@
         <ul>
             <h3>Bize Ulaşın</h3>
             <hr>
-            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> +90 465 799 64 79</li>
-            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> yerbilimleri@.com.tr</li>
+            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> +90 465 799 64 79
+            </li>
+            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> yerbilimleri@.com.tr
+            </li>
         </ul>
 
     </footer>
 
     <div class="footerbar">
         Tüm Hakları Saklıdır &copy;
-        </div>
+    </div>
 
     <!--Footer Bitiş-->
 
