--- a/jeofizik.html
+++ b/jeofizik.html
@@ -9,12 +9,12 @@
     <meta name="keywords" content="Yer Bilimleri, Earth Sciences, Yer Bilimi, Earth Science">
     <meta name="description" content="Yer Bilimleri ve Alt Dalları">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="jeofizik.css">
     <link rel="stylesheet" href="font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
-    <title>Yer Bilimleri</title>
+    <title>Jeofizik Ekipmanlar</title>
 </head>
 
 <body>
@@ -69,44 +69,100 @@
 
     <section class="icerik">
 
-        <h2>Yer Bilimleri Nedir ?</h2>
+        <h2>Jeofizik Ekipmanlar</h2>
         <hr>
         <br>
-        Yer bilimleri, Dünya'nın ve atmosferinin fiziksel ve kimyasal yapısıyla uğraşan bir bilim dalı olup, Dünya
-        gezegenine ait bütün doğa bilimi alanlarını kapsar. Yer bilimleri gezegen biliminin bir dalı olarak
-        düşünülebilir ancak tarihi daha eskiye dayanır. Yer bilimleri, her biri kendi içinde daha özelleşmiş
-        alanlara ayrılabilen dört ana çalışma alanından oluşur; bunlar sırasıyla litosfer, hidrosfer, atmosfer ve
-        biyosferdir.
-        <br>
-        <br>
-        Yer bilimlerine hem indirgemeci hem de bütüncül yaklaşımlar bulunmaktadır. Yer bilimleri aynı zamanda Dünya
-        ve Dünya'ya komşu gökcisimlerinin incelenmesidir. Yer bilimcilerin bir kısmı enerji ve maden kaynaklarının
-        yerlerini tespit etmek için üzerinde çalıştıkları gezegen hakkındaki bilgilerini kullanırken, bir kısmı da
-        beşeri faaliyetlerin Dünya'nın çevresine olan etkilerini araştırır ve gezegenimizi korumak için yöntemler
-        tasarlar. Bazısı da volkanlar, depremler ve kasırgalar gibi doğa olayları hakkındaki bilgilerini kullanarak
-        insanların bu tehlikeli doğa olaylarına karşı savunmasız kalmaması için yerleşim ve topluluk planlarının
-        oluşturulmasına katkıda bulunur.
-        <br>
-        <br>
-        Yer bilimleri, jeoloji, litosfer ve büyük ölçekli Dünya iç yapısının yanı sıra atmosfer, hidrosfer ve
-        biyosferin incelenmesini kapsayabilir. Yer bilimciler Dünya'nın nasıl işlediği ve evrimleştiği hakkında
-        nicel bir anlayış oluşturmak için genellikle jeoloji, kronoloji, fizik, kimya, coğrafya, biyoloji ve
-        matematik bilimlerini kullanır. Örneğin, meteorologlar hava durumunu inceler ve tehlikeli fırtınaları
-        araştırırlar. Hidrologlar suyu inceler ve gözlemleri sonucunda sel uyarısında bulunurlar. Sismologlar
-        depremleri inceler ve nerede gerçekleşeceğini anlamaya çalışırlar. Jeologlar kayaları inceler ve faydalı
-        minerallerin bulunmasına yardımcı olurlar. Yer bilimciler çoğunlukla sahada çalıştıkları için dağlara
-        tırmanmak, deniz dibini araştırmak, mağaralar boyunca sürünmek, bataklıklarda bata çıka yürümek genellikle
-        işlerinin birer parçasıdır. Ölçümler yapar ve numune (bunlara taşlar ve nehir suyu örnek verilebilir)
-        toplarlar ve bulgularını çizelge ve haritalara kaydederler.
-        <br>
-        <hr>
 
-        <marquee behavior="alternate" direction="right" scrollamount="10">
-            <img src="Resimler/Araba1.jpg" alt="kayanresim" class="yuvarlak">
-        </marquee>
-        <marquee behavior="alternate" direction="left" scrollamount="10">
-            <img src="Resimler/guzergah-etutleri_e5d7f.jpg" alt="kayanresim" class="yuvarlak">
-        </marquee>
+        <ul>
+            <h2>1. Sismik Ekipman</h2>
+            <br>
+            <li>* Ambrogeo Echo 24/2010 Sismik alet ( 24 kanallı)</li>
+            <li>* 4.5 Hz düşey jeofon setleri</li>
+            <li>* 40 Hz yansıma jeofon setleri</li>
+            <li>* 10 Hz P ve S jeofon setleri</li>
+            <li>* 14 Hz P ve S jeofon setleri</li>
+            <li>* 14 Hz S jeofon (çift bacaklı)</li>
+            <li>* Enerji kaynağı için Airgun ve basit patlatma sistemleri</li>
+            <li>* Metalik ve ametalik maden aramaları;</li>
+            <li>* Doğalgaz ve petrol aramaları;</li>
+            <li>* Arkeolojik alanların aranması ve haritalanması;</li>
+            <li>* Katı-sıvı atık alanlarının araştırılması;</li>
+            <li>* Altyapı araştırmaları ( gömülü boru ve elektrik hatları, baz kulesi altyapısı vb.);</li>
+            <li>* Adli araştırmalar (gömülü ceset, toplu mezarlar, sığınak, gizli tünel vb.);</li>
+            <li>* Deniz jeofiziği;</li>
+            <li>* Teknik danışmanlık;</li>
+        </ul>
+        <br>
+        <ul>
+            <h2>2. Miktotremör Ekipman</h2>
+            <br>
+            <li>* Sara Sr04 Seismic Kayıtçı</li>
+            <li>* Sara SS45 3 Bileşen Hız Ölçer Sensörleri</li>
+            <li>* Ambrogeo Hvsr 3 Echo Tromo Hız ölçer</li>
+        </ul>
+        <br>
+        <ul>
+            <h2>3. Özdirenç Ekipman</h2>
+            <br>
+            <li>* 5 adet Sumetko V1 ve V2 DC Özdirenç Alıcı</li>
+            <li>* 1 adet Mta yapımı AC özdirenç alıcı verici sistemi</li>
+            <li>* 6 adet 1000-6500 Kw aralığında verici (varyak-redresör) güç kaynağı</li>
+            <li>* 6 adet 2,5-6,6 kwa arasında jeneratör</li>
+            <li>* 50000 m sahra kablosu ve diğer aparatları</li>
+        </ul>
+        <br>
+        <ul>
+            <h2>4. Çok elektrotlu Özdirenç Ekipman (Multielectrode rezistivity System)</h2>
+            <br>
+            <li>* Ambrogeo Mangusta Tmg255 2 kanal 96 elektrotlu Sistem</li>
+            <li>* 950 m maximum serim uzunlugu</li>
+            <li>* Yerli üretim 60 Elektrotlu Yarı Otomatik Özdirenç aleti</li>
+            <li>* 300 m maks. serim uzunluğu</li>
+        </ul>
+        <br>
+        <ul>
+            <h2>5. Jeoradar (gpr) ekipman</h2>
+            <br>
+            <li>* Mala Ramac X3M Gpr ve Ekipmanları</li>
+            <li>* Radarteam Cobra Wifi 100-800 Mhz Gpr ve Ekipmanları</li>
+            <li>*100, 250 ve 500 Mhz Korumalı Anten Seti</li>
+        </ul>
+        <br>
+        <ul>
+            <h2>6. Manyetotellurik ekipman</h2>
+            <br>
+            <li>* 4 takım Phoenix MtuA Data Acqouisition System (10 000Hz to 0.00002 Hz)</li>
+            <li>* 12 adet MT sensör Mtc50H</li>
+            <li>* 12 adet Amt sensör Mtc30</li>
+            <li>* 24 adet Pb-Pbcl2 Elektrot</li>
+        </ul>
+        <br>
+        <ul>
+            <h2>7. Manyetik Ekipman</h2>
+            <br>
+            <li>* Geometrix G856 Proton Manyetometresi</li>
+        </ul>
+        <br>
+        <ul>
+            <h2>8. Gravite Ekipman</h2>
+            <br>
+            <li>* Scintrex – CG5 Mikro Gravite Aleti</li>
+        </ul>
+        <br>
+        <ul>
+            <h2>9. Frekans Domain İP Aleti</h2>
+            <br>
+            <li>* 10. SP (Doğal potansiyel)</li>
+            <li>* 24 çift Bakırsülfat fincan ve diğer aparatları</li>
+        </ul>
+        <br>
+        <ul>
+            <h2>10. SP (Doğal potansiyel)</h2>
+            <br>
+            <li>* 24 çift Bakırsülfat fincan ve diğer aparatları</li>
+        </ul>
+
+        <br>
         <hr>
     </section>
 
@@ -259,15 +315,17 @@
         <ul>
             <h3>Bize Ulaşın</h3>
             <hr>
-            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> +90 465 799 64 79</li>
-            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> yerbilimleri@.com.tr</li>
+            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> +90 465 799 64 79
+            </li>
+            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> yerbilimleri@.com.tr
+            </li>
         </ul>
 
     </footer>
 
     <div class="footerbar">
         Tüm Hakları Saklıdır &copy;
-        </div>
+    </div>
 
     <!--Footer Bitiş-->
 
