--- a/jeotermal.html
+++ b/jeotermal.html
@@ -9,12 +9,12 @@
     <meta name="keywords" content="Yer Bilimleri, Earth Sciences, Yer Bilimi, Earth Science">
     <meta name="description" content="Yer Bilimleri ve Alt Dalları">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="jeotermal.css">
     <link rel="stylesheet" href="font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
-    <title>Yer Bilimleri</title>
+    <title>Jeotermal Enerji Araştırmaları</title>
 </head>
 
 <body>
@@ -68,45 +68,61 @@
     <!--İcerik Bölümü,-->
 
     <section class="icerik">
+        <h2>Jeotermal Enerji Araştırmaları</h2>
+        <hr>
+        <br>
+        <p>
+            JEOTERMAL akışkanlar, birçok amaçla kullanılır. Sera ısıtmacılığı, turizm, kentlerin merkezi ısıtmaları,
+            sağlık
+            gibi alanlar ile son yıllarda özellikle elektrik enerjisi sağlama amaçlı kullanılmaya başlanmıştır.
+            Yenilenebilir temiz enerji olarak kabul edilmekle birlikte, doğru kullanılmaması halinde, çevresel sorunlara
+            neden olabilmektedir. En önemli sorun, sıcak akışkanın kullanıldıktan sonra, alıcı ortama geri verilmemesi
+            yani
+            reenjeksiyon yapılmamasıdır.
 
-        <h2>Yer Bilimleri Nedir ?</h2>
-        <hr>
-        <br>
-        Yer bilimleri, Dünya'nın ve atmosferinin fiziksel ve kimyasal yapısıyla uğraşan bir bilim dalı olup, Dünya
-        gezegenine ait bütün doğa bilimi alanlarını kapsar. Yer bilimleri gezegen biliminin bir dalı olarak
-        düşünülebilir ancak tarihi daha eskiye dayanır. Yer bilimleri, her biri kendi içinde daha özelleşmiş
-        alanlara ayrılabilen dört ana çalışma alanından oluşur; bunlar sırasıyla litosfer, hidrosfer, atmosfer ve
-        biyosferdir.
-        <br>
-        <br>
-        Yer bilimlerine hem indirgemeci hem de bütüncül yaklaşımlar bulunmaktadır. Yer bilimleri aynı zamanda Dünya
-        ve Dünya'ya komşu gökcisimlerinin incelenmesidir. Yer bilimcilerin bir kısmı enerji ve maden kaynaklarının
-        yerlerini tespit etmek için üzerinde çalıştıkları gezegen hakkındaki bilgilerini kullanırken, bir kısmı da
-        beşeri faaliyetlerin Dünya'nın çevresine olan etkilerini araştırır ve gezegenimizi korumak için yöntemler
-        tasarlar. Bazısı da volkanlar, depremler ve kasırgalar gibi doğa olayları hakkındaki bilgilerini kullanarak
-        insanların bu tehlikeli doğa olaylarına karşı savunmasız kalmaması için yerleşim ve topluluk planlarının
-        oluşturulmasına katkıda bulunur.
-        <br>
-        <br>
-        Yer bilimleri, jeoloji, litosfer ve büyük ölçekli Dünya iç yapısının yanı sıra atmosfer, hidrosfer ve
-        biyosferin incelenmesini kapsayabilir. Yer bilimciler Dünya'nın nasıl işlediği ve evrimleştiği hakkında
-        nicel bir anlayış oluşturmak için genellikle jeoloji, kronoloji, fizik, kimya, coğrafya, biyoloji ve
-        matematik bilimlerini kullanır. Örneğin, meteorologlar hava durumunu inceler ve tehlikeli fırtınaları
-        araştırırlar. Hidrologlar suyu inceler ve gözlemleri sonucunda sel uyarısında bulunurlar. Sismologlar
-        depremleri inceler ve nerede gerçekleşeceğini anlamaya çalışırlar. Jeologlar kayaları inceler ve faydalı
-        minerallerin bulunmasına yardımcı olurlar. Yer bilimciler çoğunlukla sahada çalıştıkları için dağlara
-        tırmanmak, deniz dibini araştırmak, mağaralar boyunca sürünmek, bataklıklarda bata çıka yürümek genellikle
-        işlerinin birer parçasıdır. Ölçümler yapar ve numune (bunlara taşlar ve nehir suyu örnek verilebilir)
-        toplarlar ve bulgularını çizelge ve haritalara kaydederler.
-        <br>
-        <hr>
+            JEOTERMAL (Sıcak akışkan) aramaları şirketimizin iş alanları arasında yer almaktadır. Yerbilimlerinin
+            konularından olan sıcak akışkan aramaları, yer altı suyu araması gibi düşünülmekte ise de ondan çok farklı
+            bir
+            uygulama alanıdır. Sıcak akışkan aramalarında, özellikle tektonik yapının (aktif fay hatlarının)
+            çözümlenmesi
+            gerekmektedir. Çünkü, sıcak suyu yer yüzeyine taşıyan en önemli etmenlerden biri faylardır.
+
+            Fayların bazıları, yüzeydeki soğuk suları yer altına taşır. Bazıları ise yer altında ısınan bu suların yer
+            yüzüne taşınmasını sağlar. Jeotermal aramalarında çözümlenmesi gereken en önemli konu, hangi fayların
+            besleyici
+            hangilerinin taşıyıcı olduklarının bulunmasıdır. Sular, faylarla derinlere taşınarak sıcak mağmanın etkisi
+            ile
+            sıcak akışkan oluşturur. Bu sıcak akışkanların yer altında hapsoldukları geçirimli kayaçlara ise hazne kaya
+            denilir. Jeotermal aramalarındaki ikinci önemli araştırma konusu ise bu hazne kayanın yerini ve derinliğini
+            ortaya çıkarmaktır.
+
+            Sıcak akışkanların, sondaj sırasında o yöredeki soğuk sularla karışmaması da önem taşır. Bu nedenle,
+            jeotermal
+            aramalarında ayrıca, soğuk yer altı sularının da yeri ve derinliği araştırılarak sondaj sırasında
+            yalıtılarak
+            gerekli önlemlerin alınabilmesi sağlanır. Bu açıklamalardan anlaşılacağı üzere, sıcak su aramaları özel bir
+            uzmanlık alanıdır. Bu bilgileri araştırmadan, rastgele yapılan sondajlarla sıcak su alınabilirse de bu
+            suların
+            uygun koşullarda çıkarılmaması, reenjeksiyonun doğru yapılmaması, yalıtımının sağlanamaması gibi nedenlerle,
+            akışkan sıcaklığının giderek düşmesi, verim kaybı, çevre kirliliği gibi sorunlar ortaya çıkacaktır.
+
+            Yukarıda sayılan veriler, ancak iyi bir jeolojik-jeokimyasal-jeofizik işbirliği ile yapılacak araştırma
+            sayesinde sağlanabilir. Bunlardan birisinin eksik olması, yanlış yorumlanması, çok pahalıya mâl olan
+            sondajların
+            amacına ulaşamaması anlamına gelmektedir.
+
+            Bir Jeotermal Enerji Araştırma Firması olan Sumet Yerbilimleri, şirket bünyesinde uyguladığı yüksek
+            çözünürlük
+            sağlayan jeofizik yöntemleriyle siz değerli enerji yatırımcılarının hizmetindedir. Söz konusu bu yöntemlerin
+            başında Manyetotellürik MT ve AMT yöntemleri gelmektedir.
+        </p>
 
         <marquee behavior="alternate" direction="right" scrollamount="10">
-            <img src="Resimler/Araba1.jpg" alt="kayanresim" class="yuvarlak">
+            <img src="Resimler/jeotermal-enerji-arastirmalari_f9a66.jpg" alt="kayanresim" class="yuvarlak">
         </marquee>
-        <marquee behavior="alternate" direction="left" scrollamount="10">
-            <img src="Resimler/guzergah-etutleri_e5d7f.jpg" alt="kayanresim" class="yuvarlak">
-        </marquee>
+
+        <br>
+        <br>
         <hr>
     </section>
 
@@ -259,15 +275,17 @@
         <ul>
             <h3>Bize Ulaşın</h3>
             <hr>
-            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> +90 465 799 64 79</li>
-            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> yerbilimleri@.com.tr</li>
+            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> +90 465 799 64 79
+            </li>
+            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> yerbilimleri@.com.tr
+            </li>
         </ul>
 
     </footer>
 
     <div class="footerbar">
         Tüm Hakları Saklıdır &copy;
-        </div>
+    </div>
 
     <!--Footer Bitiş-->
 
