--- a/zemin.html
+++ b/zemin.html
@@ -9,12 +9,12 @@
     <meta name="keywords" content="Yer Bilimleri, Earth Sciences, Yer Bilimi, Earth Science">
     <meta name="description" content="Yer Bilimleri ve Alt Dalları">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="zemin.css">
     <link rel="stylesheet" href="font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
-    <title>Yer Bilimleri</title>
+    <title>Zemin ve Yerleşime Uygunluk Etütleri</title>
 </head>
 
 <body>
@@ -68,45 +68,40 @@
     <!--İcerik Bölümü,-->
 
     <section class="icerik">
-
-        <h2>Yer Bilimleri Nedir ?</h2>
+        <h2>Zemin ve Yerleşime Uygunluk Etütleri</h2>
         <hr>
         <br>
-        Yer bilimleri, Dünya'nın ve atmosferinin fiziksel ve kimyasal yapısıyla uğraşan bir bilim dalı olup, Dünya
-        gezegenine ait bütün doğa bilimi alanlarını kapsar. Yer bilimleri gezegen biliminin bir dalı olarak
-        düşünülebilir ancak tarihi daha eskiye dayanır. Yer bilimleri, her biri kendi içinde daha özelleşmiş
-        alanlara ayrılabilen dört ana çalışma alanından oluşur; bunlar sırasıyla litosfer, hidrosfer, atmosfer ve
-        biyosferdir.
-        <br>
-        <br>
-        Yer bilimlerine hem indirgemeci hem de bütüncül yaklaşımlar bulunmaktadır. Yer bilimleri aynı zamanda Dünya
-        ve Dünya'ya komşu gökcisimlerinin incelenmesidir. Yer bilimcilerin bir kısmı enerji ve maden kaynaklarının
-        yerlerini tespit etmek için üzerinde çalıştıkları gezegen hakkındaki bilgilerini kullanırken, bir kısmı da
-        beşeri faaliyetlerin Dünya'nın çevresine olan etkilerini araştırır ve gezegenimizi korumak için yöntemler
-        tasarlar. Bazısı da volkanlar, depremler ve kasırgalar gibi doğa olayları hakkındaki bilgilerini kullanarak
-        insanların bu tehlikeli doğa olaylarına karşı savunmasız kalmaması için yerleşim ve topluluk planlarının
-        oluşturulmasına katkıda bulunur.
-        <br>
-        <br>
-        Yer bilimleri, jeoloji, litosfer ve büyük ölçekli Dünya iç yapısının yanı sıra atmosfer, hidrosfer ve
-        biyosferin incelenmesini kapsayabilir. Yer bilimciler Dünya'nın nasıl işlediği ve evrimleştiği hakkında
-        nicel bir anlayış oluşturmak için genellikle jeoloji, kronoloji, fizik, kimya, coğrafya, biyoloji ve
-        matematik bilimlerini kullanır. Örneğin, meteorologlar hava durumunu inceler ve tehlikeli fırtınaları
-        araştırırlar. Hidrologlar suyu inceler ve gözlemleri sonucunda sel uyarısında bulunurlar. Sismologlar
-        depremleri inceler ve nerede gerçekleşeceğini anlamaya çalışırlar. Jeologlar kayaları inceler ve faydalı
-        minerallerin bulunmasına yardımcı olurlar. Yer bilimciler çoğunlukla sahada çalıştıkları için dağlara
-        tırmanmak, deniz dibini araştırmak, mağaralar boyunca sürünmek, bataklıklarda bata çıka yürümek genellikle
-        işlerinin birer parçasıdır. Ölçümler yapar ve numune (bunlara taşlar ve nehir suyu örnek verilebilir)
-        toplarlar ve bulgularını çizelge ve haritalara kaydederler.
-        <br>
-        <hr>
+        <p>
+            Bu etütler firmamızca, tüm gelişmiş ülkelerde uygulandığı gibi, jeolojik, jeofizik ve hidrojeolojik
+            araştırma ve ölçümlerle gerçekleştirilmektedir.Jeolojik araştırmalar, inceleme alanını ve çevresinin
+            jeolojik yapısını, yer altı suyu taşıyan birimlerin bulunma olasılığı ile bulunabilme geometrisini ortaya
+            koyabilmek amacıyla yapılır. Araştırmayı yönlendirici çalışmalardır. Çalışmalar sonucu, inceleme alanının
+            jeolojik haritası ile yer altı kesiti hazırlanır.
 
-        <marquee behavior="alternate" direction="right" scrollamount="10">
-            <img src="Resimler/Araba1.jpg" alt="kayanresim" class="yuvarlak">
-        </marquee>
-        <marquee behavior="alternate" direction="left" scrollamount="10">
-            <img src="Resimler/guzergah-etutleri_e5d7f.jpg" alt="kayanresim" class="yuvarlak">
-        </marquee>
+            Jeofizik araştırma ve ölçümler, jeolojik araştırmalarla belirlenen seçeneklerden hangisinin geçerli
+            olduğunu, yüzeyden gözlenemeyen yer altı geometrisini (birimlerin yer altındaki uzanımı, kalınlık ve
+            derinlikleri, örtülü fay olup olmadığı, jeolojik birimlerin yer altındaki fiziksel durumları vb) belirlemek
+            amacıyla yapılmaktadır.
+
+            Hidrojeolojik araştırmalar ise, jeolojik ve jeofizik bulgularla ortaya konan yapının, yer altı suyu
+            açısından irdelenmesini sağlamaktadır. Bu amaçla, meteorolojik veriler derlenir ve buradan yörenin su
+            bilançosu hazırlanır. Jeolojik birimlerin ve yapısal ögelerin (faylar, uyumsuzluklar vb) su
+            taşıma-iletme-verme özellikleri incelenir, su kimyası ile, alınacak suyun olası özellikleri belirlenir, en
+            uygun kuyu yeri/yerleri, derinliği ve açılması gereken kuyunun teknik özellikleri seçilir.
+
+            Yer altı suyu etütleri, doğrudan kuyu açılmadan önce, su alınıp alınmayacağını belirlediği için, bir tür
+            sigorta yerine geçer. Böylece, su olasılığı yoksa veya çok düşükse, yüksek maliyetli kuyu açılmasından
+            kaçınılmış olur.
+
+            Ayrıca, yanlış kuyu yeri veya derinliği seçimi nedeniyle su alınamamış pek çok örnek vardır. Bazı yerlerde
+            ise, tuzlu veya bozuk kalitede su alınmıştır.
+
+            Yer altı suyu etütleri, yukarıdaki şekilde ve doğru uygulandığı taktirde, % 90 dolayında başarılı
+            olabilmektedir.
+        </p>
+
+        <br>
+        <br>
         <hr>
     </section>
 
@@ -259,15 +254,17 @@
         <ul>
             <h3>Bize Ulaşın</h3>
             <hr>
-            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> +90 465 799 64 79</li>
-            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> yerbilimleri@.com.tr</li>
+            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> +90 465 799 64 79
+            </li>
+            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> yerbilimleri@.com.tr
+            </li>
         </ul>
 
     </footer>
 
     <div class="footerbar">
         Tüm Hakları Saklıdır &copy;
-        </div>
+    </div>
 
     <!--Footer Bitiş-->
 
